updated work and contact section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <!-- Hero section -->
         <section class="hero">
-            <div>
+            <div class="subtitle">
                 <p>Cool Subtitle here</p> 
             </div>
         </section>
@@ -57,7 +57,7 @@
                     Work
                 </h2>
 
-        <div class="content">
+            <div class="content">
                 <div class="run-buddy">
                     <div class="run-buddy-info">
                         <h3>Run Buddy</h3>
@@ -68,28 +68,35 @@
                         width="800px" height="350px">
                     </a>
                 </div>
-
-                <div class="robot-gladiators"> 
-                    <div class="robot-gladiators-info">
-                        <h3>Robot Gladiatiors</h3>
-                        JavaScript/CSS/HTML
+                <div class="row1">
+                    <div class="robot-gladiators"> 
+                        <div class="robot-gladiators-info">
+                            <h3>Robot Gladiatiors</h3>
+                            JavaScript/CSS/HTML
+                        </div>
+                        <a>
+                            <img src="assets/images/robots.jpg" alt="" 
+                            width="380px" height="225px">
+                        </a>
                     </div>
-                    <a>
-                        <img src="assets/images/robots.jpg" alt="" 
-                        width="400px" height="225px">
-                    </a>
-                </div>
 
-                <div class="Password Generator">
-                    <h3>PassWord Generator</h3>
-                    JavaScript/HTML
+                    <div class="password">
+                        <div class="password-info">
+                            <h3>PassWord Generator</h3>
+                            JavaScript/HTML
+                        </div>
+                        <a>
+                            <img src="assets/images/password.jpg" alt=""
+                            width="380px" height="225px">
+                        </a>
+                    </div>
                 </div>
             </div>
 
         </section>
         
         <!-- Contact section -->
-        <section id="Contact-Me" class="">
+        <section id="Contact-Me" class="contact">
             <h3>Contact info</h3>
             <p> (801)-920-8902</p>
             <p> jadenrobison8@Gmail.com </p>
@@ -97,10 +104,11 @@
             <p> Instagram </p>
         </section>
 
-        <!-- Resume section -->
+        <!-- Resume section 
         <section id="Resume">
 
         </section>
+        -->
 
         <!--footer-->
         <footer>
