section title update

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <h2 class="section-title">About Me</h2>
 
             <div class="content text"> 
-                <p> I am a Full Stack qualified web developer seeking employment. I've studied engineering for 5+ years at Weber State University, as well as in high school. I'm proficient with
-                    HTML, CSS, Javascript, Java, C++, Python, VHDL(Verilog Hardware Description language), as well as advanced math. I have a pre-engineering degree and a certificate of completion
+                <p> I am a Full Stack qualified web developer seeking employment. I'm proficient with HTML, CSS, Javascript, Java, 
+                    C++, Python, VHDL(Verilog Hardware Description language). I have a pre-engineering degree and a certificate of completion
                     from the The University of Utah Full Stack Coding BootCamp. I enjoy being active and doing all things outdoors.  
                 </p>
             </div>
