--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content ="width=device-width, initial-scale=1.0">
-        <title>Jaden Robison</title>
+        <!-- stylesheets -->
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+            integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+            crossorigin="anonymous"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./assets/css/style.css" />
+
+        <title>Jaden Robison</title>
     </head>
 
     <body>
@@ -69,7 +86,7 @@
                     </a>
                 </div>
                 <div class="row1">
-                    <div class="robot-gladiators"> 
+                    <div class="robot-gladiators card"> 
                         <div class="robot-gladiators-info">
                             <h3>Robot Gladiatiors</h3>
                             JavaScript/CSS/HTML
@@ -114,9 +131,12 @@
         <footer>
             <h2>❤️ Made with love by Jaden Robison.</h2>
             <div> 
-            <!--    <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
-                &copy; 2019 Run Buddy, Inc. -->
+            
             </div>
         </footer>
+
+        <!--scripts-->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="/assets/js/script.js"></script>
     </body>
 </html>
