--- a/index.html
+++ b/index.html
@@ -69,30 +69,30 @@
         </section>
         
         <!-- Work section -->
-        <section id="Work" class="work">
+        <section id="Work" class="work container-fluid">
                 <h2 class="section-title">
                     Work
                 </h2>
 
             <div class="content">
-                <div class="run-buddy">
+                <div class="run-buddy row">
                     <div class="run-buddy-info">
                         <h3>Run Buddy</h3>
                         <p>HTML / CSS</p>
                     </div>
                     <a href="https://jadenrobison8.github.io/run-buddy/">
-                        <img src="assets/images/run-buddy-img.png" alt="" 
+                        <img src="assets/images/run-buddy-img.png" class="img-fluid" alt="" 
                         width="800px" height="350px">
                     </a>
                 </div>
-                <div class="row1">
-                    <div class="robot-gladiators card"> 
+                <div class="row">
+                    <div class="robot-gladiators"> 
                         <div class="robot-gladiators-info">
                             <h3>Robot Gladiatiors</h3>
                             JavaScript/CSS/HTML
                         </div>
                         <a>
-                            <img src="assets/images/robots.jpg" alt="" 
+                            <img src="assets/images/robots.jpg" class="img-fluid" alt="" 
                             width="380px" height="225px">
                         </a>
                     </div>
@@ -103,7 +103,7 @@
                             JavaScript/HTML
                         </div>
                         <a>
-                            <img src="assets/images/password.jpg" alt=""
+                            <img src="assets/images/password.jpg" class="img-fluid" alt=""
                             width="380px" height="225px">
                         </a>
                     </div>
@@ -114,11 +114,11 @@
         
         <!-- Contact section -->
         <section id="Contact-Me" class="contact">
-            <h3>Contact info</h3>
+            <h3>Contact info : </h3>
             <p> (801)-920-8902</p>
             <p> jadenrobison8@Gmail.com </p>
-            <p> GitHub </p>
-            <p> Instagram </p>
+            <p> <a href="https://github.com/jadenrobison8">GitHub</a> </p>
+            <p> <a href="https://www.instagram.com/jadenrobison8/">Instagram</a> </p>
         </section>
 
         <!-- Resume section 
