--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 
                     <div class="password">
                         <div class="password-info">
-                            <h3>PassWord Generator</h3>
-                            JavaScript/HTML
+                            <h3>Plant Daddy</h3>
+                            JavaScript/MYSQL/Handlebars
                         </div>
                         <a>
-                            <img src="assets/images/password.jpg" class="img-fluid" alt=""
+                            <img src="assets/images/plant-daddy.png" class="img-fluid" alt=""
                             width="380px" height="225px">
                         </a>
                     </div>
